--- a/The Restaurant/build.gradle
+++ b/The Restaurant/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.hsqldb:hsqldb'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
+    testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'com.icegreen:greenmail:2.0.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
 
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.1.1'
