--- a/The Restaurant/src/main/resources/application.yaml
+++ b/The Restaurant/src/main/resources/application.yaml
@@ -2,8 +2,11 @@ spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/restaurant_yami?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
-    username: ${MYSQL_USER:root}
-    password: ${MYSQL_PASSWORD:novo_na4aloza17}
+    username: ${MYSQL_USER}
+    password: ${MYSQL_PASSWORD}
+
+
+
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
     defer-datasource-initialization: true
@@ -39,9 +42,16 @@ open.exchange.rates:
   symbols: EUR,BGN
   enabled: false
 
+
 mail:
-  restaurant: "restaurant@example.com"
-  host: localhost
-  port: 1025
-  username: test
-  password: test@example.com
+    host: "smtp.gmail.com"
+    port: 587
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASS}
+
+
+
+
+
+
+
